--- a/mvcproject/Views/Home/Index.cshtml
+++ b/mvcproject/Views/Home/Index.cshtml
@@ -7,9 +7,47 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="my-4">
+    <form class="row row-cols-lg-auto g-3 align-items-center">
+
+
+  <div class="col-12">
+    <label class="visually-hidden" for="inlineFormSelectPref">Brand</label>
+    <select class="form-select" id="phoneId">
+      <option selected>Choose...</option>
+      <option value="1">Samsung</option>
+      <option value="2">Huawei</option>
+      <option value="3">Iphone</option>
+    </select>
+  </div>
+
+    <div class="col-12">
+    <label class="visually-hidden" for="inlineFormInputGroupUsername">Search by title</label>
+    <div class="input-group">
+      <div class="input-group-text"></div>
+      <input type="text" class="form-control" id="" placeholder="Search by title">
+    </div>
+  </div>
+
+  <div class="col-12">
+    <button type="submit" class="btn btn-primary">Filter</button>
+  </div>
+</form>
+</div>
+
+<div class="w-100 mt-4 d-flex flex-wrap justify-content-center">
+    @for (int i = 0; i < 9; i++)
+    {
+        <div class="card mx-2 mb-4" style="width: 16rem;">
+            <img src="https://picsum.photos/120/200" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Phone title</h5>
+                <p class="card-text">Price: 1000$ Dimensions: 123cm</p>
+                <a href="#" class="btn btn-primary">Add to cart</a>
+            </div>
+        </div>
+    }
+   
 </div>
 
 @if (User.IsInRole("Admin"))
