--- a/mvcproject/Views/Shared/_Layout.cshtml
+++ b/mvcproject/Views/Shared/_Layout.cshtml
@@ -35,6 +35,32 @@
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script>
+    loadCartCount()
+    async function loadCartCount(phoneId) {
+        const usernameEl = document.getElementById("username")
+        const username = usernameEl.innerText
+        if (usernameEl) {
+            if (username.length < 1) {
+                window.location.href = "/Identity/Account/Login"
+            }
+        }
+
+
+        try {
+            const response = await fetch(`/Cart/GetTotalItemInCart`);
+            if (response.status == 200) {
+                const result = await response.json();
+                const cartCountEl = document.getElementById("cartCount");
+                cartCountEl.innerHTML = result;
+
+            }
+        }
+        catch (err) {
+            console.log(err);
+        }
+    }
+</script>
 </html>
 
 @await RenderSectionAsync("Scripts", required: false)
