--- a/mvcproject/Views/Home/Index.cshtml
+++ b/mvcproject/Views/Home/Index.cshtml
@@ -58,7 +58,7 @@
                 <h5 class="card-title">@phone.Brand.Name @phone.Name</h5>
                 <p class="card-text">Price: @phone.Price</p>
                 <p class="card-text">Dimensions: @phone.ShortDescription</p>
-                <p class="card-text">Stock: @phone.InStock</p>
+                <p class="card-text">Stock: @phone.Quantity</p>
                 <button type="button" onclick="add(`@phone.Id`)" class="btn btn-primary">Add to cart</button>
             </div>
         </div>
