--- a/mvcproject/Views/Shared/_Layout.cshtml
+++ b/mvcproject/Views/Shared/_Layout.cshtml
@@ -25,6 +25,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/Home/Privacy">Privacy</a>
                     </li>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <li class="nav-item"><a class="nav-link" href="/AdminOperations/AllOrders">Orders</a></li>
+                    }
+
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
