added stock manegment

--- a/mvcproject/Views/Cart/GetUserCart.cshtml
+++ b/mvcproject/Views/Cart/GetUserCart.cshtml
@@ -46,7 +46,7 @@
                             <span style="border: 1px solid;padding: 8px 8px;color: red;border-radius: 5px;margin-right:4px">Out of stock </span>
                         }
                         @* Decrement button *@
-                        <a class="btn btn-info" href="/cart/removeitem?phoneid=@item.SmartphoneId">-</a>
+                        <a class="btn btn-info" href="/cart/RemoveItem?phoneid=@item.SmartphoneId">-</a>
                     </td>
                 </tr>
             }
