--- a/mvcproject/Views/Shared/_Layout.cshtml
+++ b/mvcproject/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                     @if (User.IsInRole("Admin"))
                     {
                         <li class="nav-item"><a class="nav-link" href="/AdminOperations/AllOrders">Orders</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/Stock/Index">Stock</a></li>
                     }
 
                 </ul>
@@ -36,6 +37,9 @@
         </div>
     </nav>
     <div class="container">
+        <div class="my-2">
+            <partial name="_Notifications"/>
+        </div>
         @RenderBody()
     </div>
 </body>
