--- a/mvcproject/Views/Shared/_Layout.cshtml
+++ b/mvcproject/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                     {
                         <li class="nav-item"><a class="nav-link" href="/AdminOperations/AllOrders">Orders</a></li>
                         <li class="nav-item"><a class="nav-link" href="/Stock/Index">Stock</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/Brand/Index">Brand</a></li>
                     }
 
                 </ul>
