added Admin layout

--- a/mvcproject/Views/AdminOperations/AllOrders.cshtml
+++ b/mvcproject/Views/AdminOperations/AllOrders.cshtml
@@ -2,6 +2,7 @@
 @using SM.Data.Models.Models
 @model IEnumerable<Order>
 @{
+    Layout = "_AdminLayout";
     ViewData["Title"] = "AllOrders";
 }
 
