--- a/mvcproject/Views/Shared/_Layout.cshtml
+++ b/mvcproject/Views/Shared/_Layout.cshtml
@@ -27,10 +27,13 @@
                     </li>
                     @if (User.IsInRole("Admin"))
                     {
-                        <li class="nav-item"><a class="nav-link" href="/AdminOperations/AllOrders">Orders</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/Stock/Index">Stock</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/AdminOperations/Dashboard">Admin panel</a>
+                        </li>
+                       @*  <li class="nav-item"><a class="nav-link" href="/AdminOperations/AllOrders">Admin panel</a></li>
+@*                         <li class="nav-item"><a class="nav-link" href="/Stock/Index">Stock</a></li>
                         <li class="nav-item"><a class="nav-link" href="/Brand/Index">Brand</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/Smartphone/Index">Smartphone</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/Smartphone/Index">Smartphone</a></li> *@ 
                     }
 
                 </ul>
