--- a/mvcproject/Views/Smartphone/AddSmartphone.cshtml
+++ b/mvcproject/Views/Smartphone/AddSmartphone.cshtml
@@ -1,7 +1,7 @@
 ﻿@using SM.Data.Models.DTOs
 @model SmartphoneDTO
 @{
-
+    Layout = "_AdminLayout";
 }
 <div style="width:50%">
     <h2> Add Book </h2>
