--- a/mvcproject/Views/Home/Index.cshtml
+++ b/mvcproject/Views/Home/Index.cshtml
@@ -57,7 +57,7 @@
             <div class="card-body">
                 <h5 class="card-title">@phone.Brand.Name @phone.Name</h5>
                 <p class="card-text">Price: @phone.Price</p>
-                <p class="card-text">Dimensions: @phone.ShortDescription</p>
+                <p class="card-text">Specs: @phone.ShortDescription</p>
                 <p class="card-text">Stock: @phone.Quantity</p>
                 @if(phone.Quantity > 0)
                 {
