--- a/mvcproject/Views/Smartphone/Index.cshtml
+++ b/mvcproject/Views/Smartphone/Index.cshtml
@@ -13,7 +13,7 @@
     <table class="table table-striped my-2">
         <tr>
             <th>Image</th>
-            <th>Smartphone</th>
+            <th>Brand</th>
             <th>Model</th>
             <th>Price</th>
             <th>Action</th>
@@ -33,7 +33,8 @@
                         <img src="/images/@phone.Image" style="width:80px; height:100px;" alt="smartphone image"/>
                     }
                 </td>
-                <td>@phone.Brand.Name @phone.Name</td>
+                <td>@phone.Brand.Name</td>
+                <td>@phone.Name</td>
                 <td>@phone.Price</td>
                 <td>
                     <a asp-action="UpdateSmartphone" asp-controller="Smartphone" asp-route-id="@phone.Id" class="btn btn-success">Edit</a>
