--- a/mvcproject/Views/Smartphone/AddSmartphone.cshtml
+++ b/mvcproject/Views/Smartphone/AddSmartphone.cshtml
@@ -4,7 +4,7 @@
     Layout = "_AdminLayout";
 }
 <div style="width:50%">
-    <h2> Add Book </h2>
+    <h2> Add Smartphone </h2>
     <a asp-action="Index" asp-controller="Smartphone" class="btn btn-primary">Back</a>
     <form asp-action="AddSmartphone" enctype="multipart/form-data">
         @* <input type="hidden" asp-for="Id" /> *@
