--- a/mvcproject/Views/Smartphone/UpdateSmartphone.cshtml
+++ b/mvcproject/Views/Smartphone/UpdateSmartphone.cshtml
@@ -4,7 +4,7 @@
     Layout = "_AdminLayout";
 }
 <div style="width:50%">
-    <h2> Update Book </h2>
+    <h2> Update Smartphone </h2>
     <a asp-action="Index" asp-controller="Smartphone" class="btn btn-primary">Back</a>
     <form asp-action="UpdateSmartphone" enctype="multipart/form-data">
         <input type="hidden" asp-for="Id" />
