--- a/mvcproject/Views/UserOrder/UserOrders.cshtml
+++ b/mvcproject/Views/UserOrder/UserOrders.cshtml
@@ -44,11 +44,11 @@
                                         <td>
                                             @if (string.IsNullOrEmpty(item.Smartphone.Image))
                                             {
-                                                <img src="/images/no-image.png" style="width:80px;height:100px" />
+                                                <img src="/images/no-image.png" style="width:50%;height:80px" />
                                             }
                                             else
                                             {
-                                                <img src="/images/@item.Smartphone.Image" style="width:80px;height:100px" />
+                                                <img src="/images/@item.Smartphone.Image" style="width:50%;height:80px" />
                                             }
                                         </td>
                                         <td>@item.Smartphone.Price X @item.Quantity</td>
